<resources>
    <string name="app_name">Picsum</string>
    <string name="splash">SPLASH</string>
    <string name="images">Images</string>
    <string name="retry">재시도</string>
    <string name="empty_list">리스트가 비어있습니다.</string>
    <string name="load_image_failed">이미지 로딩에 실패하였습니다.</string>
    <string name="loading">Loading…</string>
    <string name="exception_error">예기치 않은 오류가 발생하였습니다.</string>
    <string name="effect">사진효과</string>
    <string name="download">다운로드</string>
    <string name="link">원본링크</string>
    <string name="share">공유하기</string>
    <string name="file_download">파일 다운로드를 위한 권한이 필요합니다.</string>
    <string name="setting">설정하기</string>
    <string name="photo_download_failed">사진 저장을 실패하였습니다.</string>
    <string name="photo_download_complete">사진이 저장되었습니다.</string>
    <string name="gray_scale">흑백 효과</string>
    <string name="blur">블러 효과</string>
    <string name="apply">적용</string>
</resources>