<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.picsum.ui.images.ImagesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_images_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:text="@string/images"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl_images"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{vm.listVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_images_title"
            app:onRefreshListener="@{() -> vm.onRefresh()}"
            app:refreshing="@{vm.refreshVisible}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/item_images" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb_images"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.loadingVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_images_title" />

        <TextView
            android:id="@+id/tv_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:onClick="@{() -> vm.retry()}"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:visibility="@{vm.retryVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_images_title" />

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/empty_list"
            android:visibility="@{vm.emptyVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_images_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>